Implemented adding reviews (rating only for now)