@@ -1,14 +1,14 @@
 package com.example.diansspring.service.impl;
 
 import com.example.diansspring.model.Facility;
+import com.example.diansspring.model.Review;
 import com.example.diansspring.model.User;
-import com.example.diansspring.model.enums.Role;
 import com.example.diansspring.model.exceptions.CaptchaDoesNotMatchException;
 import com.example.diansspring.model.exceptions.PasswordsDoNotMatchException;
 import com.example.diansspring.model.exceptions.UserAlreadyExistsException;
-import com.example.diansspring.repository.FacilityRepository;
 import com.example.diansspring.repository.UserRepository;
 import com.example.diansspring.service.FacilityService;
+import com.example.diansspring.service.ReviewService;
 import com.example.diansspring.service.UserService;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -16,6 +16,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -24,11 +25,13 @@ import java.util.stream.Collectors;
 public class UserServiceImpl implements UserService {
     private final UserRepository userRepository;
     private final FacilityService facilityService;
+    private final ReviewService reviewService;
     private final PasswordEncoder passwordEncoder;
 
-    public UserServiceImpl(UserRepository userRepository, PasswordEncoder passwordEncoder, FacilityService facilityService) {
+    public UserServiceImpl(UserRepository userRepository, PasswordEncoder passwordEncoder, FacilityService facilityService, ReviewService reviewService) {
         this.userRepository = userRepository;
         this.facilityService = facilityService;
+        this.reviewService = reviewService;
         this.passwordEncoder = passwordEncoder;
     }
 
@@ -67,11 +70,9 @@ public class UserServiceImpl implements UserService {
         Facility facility = this.facilityService.findById(facilityId);
 
         if (Objects.equals(user, null)) return null;
-        if (Objects.equals(facility, null)) return getFavouriteFacilities(user);
+        if (Objects.equals(facility, null)) return user.getFavouriteFacilities();
 
-        String res = "";
-
-        List<Facility> userFavourites = getFavouriteFacilities(user);
+        List<Facility> userFavourites = user.getFavouriteFacilities();
         if (userFavourites.contains(facility)) {
             userFavourites.remove(facility);
         }
@@ -81,12 +82,39 @@ public class UserServiceImpl implements UserService {
         user.setFavouriteFacilities(userFavourites);
         this.userRepository.save(user);
 
-        return getFavouriteFacilities(user);
+        return user.getFavouriteFacilities();
     }
 
-    private List<Facility> getFavouriteFacilities(User user) {
-        return user.getFavouriteFacilities().stream().peek(e -> {
-            e.setFavouritedByUsers(null);
-        }).collect(Collectors.toList());
+    @Override
+    public List<Review> updateReviewsList(String username, Long facilityId, Integer review) {
+        User user = this.findByUsername(username);
+        Facility facility = this.facilityService.findById(facilityId);
+
+        if (Objects.equals(user, null)) return null;
+        if (Objects.equals(facility, null)) return user.getReviews();
+        if (Objects.equals(review, null)) return user.getReviews();
+
+        List<Review> userReviews = user.getReviews();
+        Review newReview = new Review((float) review, "", facility, user);
+        if (userReviews.stream().filter(e -> Objects.equals(e.getFacility(), facility)).toList().size() > 0) {
+            Review oldReview = this.reviewService.findByUserAndFacility(user, facility);
+            facility.setReviewRatingsAverage((facility.getReviewRatingsAverage()*facility.getReviewRatingsCount()-oldReview.getRating())/(facility.getReviewRatingsCount()-1));
+            facility.setReviewRatingsCount(facility.getReviewRatingsCount()-1);
+
+            newReview.setId(oldReview.getId());
+        }
+        else {
+            userReviews.add(newReview);
+        }
+        this.reviewService.save(newReview);
+
+        facility.setReviewRatingsAverage((facility.getReviewRatingsAverage()*facility.getReviewRatingsCount()+newReview.getRating())/(facility.getReviewRatingsCount()+1));
+        facility.setReviewRatingsCount(facility.getReviewRatingsCount()+1);
+        this.facilityService.save(facility);
+
+        user.setReviews(userReviews);
+        this.userRepository.save(user);
+
+        return user.getReviews();
     }
 }
